perplexity link added in project list

--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@
 
     <section id="recent-clones">
        <h2>Recent Clone Projects</h2>
-       <article>
+       
+        <a href="projects/Perplexity/index.html">
+        <article>
         <h3>Perplexity</h3>
         <p>An ai search tool and latest news articles provider</p>
-       </article>
+         </article>
+         </a>
 
-       <article>
+        <article>
         <h3>Project 2</h3>
         <p>Project discription</p>
        </article>
+
        <article>
         <h3>Project 3</h3>
         <p>Project discription</p>
@@ -51,5 +55,5 @@
     <p>&copy; 2025 CodeClone. All rights reserved.</p>
 </footer>
     </body>
-
+<script src="js/index.js"></script>
 </html>
