all pages of perplexity project is created

--- a/projects/Perplexity/index.html
+++ b/projects/Perplexity/index.html
@@ -28,8 +28,8 @@
             <nav>
                  <span id="search-page" class="material-icons">search</span>
                  <a href="pages/discover page/discover.html"><span id="Discover-page" class="material-icons">travel_explore</span></a>
-                 <span id="book-mark-page" class="material-icons">bookmark</span>   
-                 <span id="history-page" class="material-icons">history</span> 
+                 <a href="pages/bookMark page/bookMark.html"><span id="book-mark-page" class="material-icons">bookmark</span></a>   
+                 <a href="pages/history page/history.html"><span id="history-page" class="material-icons">history</span> </a>
             </nav>
        </footer>
     </body>
