--- a/projects/Perplexity/pages/discover page/discover.html
+++ b/projects/Perplexity/pages/discover page/discover.html
@@ -82,7 +82,14 @@
                 <h2>News headline of this news displayed at this place okay</h2>
                 <p>The discription about the above news well be displayed and to know more click on it..</p>
             </article>
-
         </main>
-
+         <footer>
+            <nav>
+                 <a href="../.././index.html"><span id="search-page" class="material-icons">search</span></a>
+                 <a href="discover.html"><span id="Discover-page" class="material-icons">travel_explore</span></a>
+                 <a href="../bookMark page/bookMark.html"><span id="book-mark-page" class="material-icons">bookmark</span></a>   
+                 <a href="../history page/history.html"><span id="history-page" class="material-icons">history</span></a>
+            </nav>
+       </footer>
     </body>
+</html>
