my phone project main page added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>CodeClone</title>
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     </head>
     <body>
 <header>
     <h1>CodeClone</h1>
-    <nav>
+       
+    <nav>   
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/cloneProjects.html">Clone Projects</a></li>
@@ -39,11 +39,13 @@
         <p>An ai search tool and latest news articles provider</p>
          </article>
          </a>
-
+         
+        <a href="projects/myPhone/index.html">
         <article>
-        <h3>Project 2</h3>
-        <p>Project discription</p>
+        <h3>MyPhone</h3>
+        <p>It is an exact clone of the smart phone</p>
        </article>
+       </a>
 
        <article>
         <h3>Project 3</h3>
