--- a/projects/Perplexity/index.html
+++ b/projects/Perplexity/index.html
@@ -32,5 +32,6 @@
                  <a href="pages/history page/history.html"><span id="history-page" class="material-icons">history</span> </a>
             </nav>
        </footer>
+       <script src="perplexity.js"></script>
     </body>
 </html>
