mistake of myphone corrected

--- a/projects/myPhone/index.html
+++ b/projects/myPhone/index.html
@@ -49,6 +49,6 @@
           <button></button>
     </footer>
 
-    <script src="myPhone.js"></script>
+    <script src="myphone.js"></script>
 </body>
 </html>
