home apps icons are added

--- a/projects/myPhone/index.html
+++ b/projects/myPhone/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="myPhone.css">
     <!--  <span class="material-symbols-outlined"></span>   -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -27,28 +28,26 @@
          <span class="material-symbols-outlined">center_focus_weak</span> 
        </div>
        <section id="home-apps">
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+          <button><li  class="fab fa-linkedin-in"></li></button>
+          <button><li  class="fab fa-instagram"></li></button>
+          <button><li  class="fab fa-youtube"></li></button>
+          <button><li  class="fab fa-fab fa-telegram-plane"></li></button>
+          <button><li  class="fab fa-whatsapp"></li></button>
+          <button><li  class="fab fab fa-pinterest-p"></li></button>
+          <button><li  class="fab fa-snapchat-ghost"></li></button>
+          <button><li  class="fab fab fa-chrome"></li></button>
+          <button><li  class="fas fa-calculator"></li></button>
+          <button><li  class="fas fa-calendar-alt"></li></button>
        </section>
     </main>
     <footer>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
-          <button></button>
+          <button><li  class="fas fa-phone"></li></button>
+          <button><li  class="fab fab fa-chrome"></li></button>
+          <button><li  class="fas fa-camera"></li></button>
+          <button><li  class="fas fa-clock"></li></button>
+          <button><li  class="fab fa-youtube"></li></button>
     </footer>
 
-    <script src="myPhone.js"></script>
+    <script src="myphone.js"></script>
 </body>
 </html>
