--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
        </article>
        </a>
 
+        <a href="chatIt.html">
        <article>
-        <h3>Project 3</h3>
+        <h3>ChatIt</h3>
         <p>Project discription</p>
        </article>
+       </a>
 </main>
 
 <footer>
