CCAR project added

--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
         <a href="chatIt.html">
        <article>
         <h3>ChatIt</h3>
-        <p>Project discription</p>
+        <p>A chatBot</p>
        </article>
        </a>
+
+       
+        <a href="projects/CCAR/CCAR.html">
+       <article>
+        <h3>CCAR</h3>
+        <p>Cashback counter and recorder is a tool manage your payments.</p>
+       </article>
+       </a>
+
+       
 </main>
 
 <footer>
