chat system added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         <p>Cashback counter and recorder is a tool manage your payments.</p>
        </article>
        </a>
+       
+        <a href="projects/SuperChat/superChat.html">
+       <article>
+        <h3>Super Chat</h3>
+        <p>A modern chat system</p>
+       </article>
+       </a>
 
        
 </main>
