--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
        </article>
        </a>
 
+      <a href="projects/ai/Ai.html">
+       <article>
+        <h3>AI</h3>
+        <p>An ai agent</p>
+       </article>
+       </a>
+
+
        
 </main>
 
