--- a/projects/ai/Ai.html
+++ b/projects/ai/Ai.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic HTML Example</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Dongle&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manjari:wght@100;400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=REM:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@@ -19,7 +20,9 @@
             padding: 1rem 2rem;
             background-color: rgba(24, 23, 23, 0.267);
         }
-
+        header h1{
+          font-size: 2rem;
+        }
        main {
             position: relative;
             min-height: 80vh;
@@ -104,6 +107,7 @@
           border: 1px solid blue;
         }
         footer {
+          padding: 2rem 0;
             padding-top: 5rem;
             text-align: center;
         }
