--- a/projects/CCAR/CCAR.html
+++ b/projects/CCAR/CCAR.html
@@ -34,7 +34,7 @@
 
        <!--cashback recoreds section-->
        <section id="transactions-list">
-        <p id="date">03-07-2025</p>
+        <p id="date"></p>
         <ul>
 
            <!--payments list will added dynamically-->
@@ -43,6 +43,7 @@
         <button id="new">New</button>
          <p id="status"></p>
         </section>
+
         <!--cashback add new section-->
 
         <section id="add-new-transaction">
@@ -56,11 +57,12 @@
                   <option value="Go Food">Go food</option>
                   <option value="Bharath pay">Bharath pay</option>
                 </select>
-
+                <input id="NumberOfTimes" type="number" min="1" placeholder="Enter No of Times">
                 <button type="submit">Submit</button>
              </form>
         </section>
 
+      <!--qr code section-->
         <section id="qr">
        
          <fieldset>
